Independent scroller and compact listing of projects.

--- a/html/options.html
+++ b/html/options.html
@@ -42,7 +42,7 @@
                 <div class="setting">
                     <div class="vertical-block first">
                         <input type="checkbox" name="use-notifications" id="USE_NOTIFICATIONS">
-                        Use Desktop Notifications to inform about new updates.
+                        Use Desktop Notifications to inform me about new updates.
                     </div>
                 </div>
             </div>
