--- a/html/background.html
+++ b/html/background.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <script type="text/javascript" src="../js/jquery.js"></script>
+    <script type="text/javascript" src="../js/options.js"></script>
     <script type="text/javascript" src="../js/background.js"></script>
 </head>
 <body>
