Finally fixed bug with scroller on Windows Chrome

--- a/html/popup.html
+++ b/html/popup.html
@@ -19,7 +19,7 @@
 
             /* Same CSS as above, plus */
             .icon-alone {
-                font-family: icons;
+                font-family: icons !important;
                 display: inline-block; /* Chrome 19 was weird with clickability without this */
             }
 
@@ -104,8 +104,8 @@
                 color:white;
                 font-weight: bold;
                 padding:10px;
-                padding-top:5px;
-                padding-bottom:5px;
+                padding-top:4px;
+                padding-bottom:4px;
                 border-radius:5px;
                 cursor: pointer;
             }
@@ -185,7 +185,7 @@
                     <img alt="Photo-little" class="projectphoto-thumb" src="http://s3.amazonaws.com/ksr/projects/329555/photo-thumb.jpg?1347588900">
 
                     <a class="button roundsmall button-visit icon-alone" id="button-visit" title="Visit Project">&#xF054;</a>
-                    <a class="button roundsmall button-remove icon-alone" id="button-remove" data-icon="&#x21f7;" title="Remove">&#x21f7;</a>
+                    <a class="button roundsmall button-remove icon-alone" id="button-remove" style="padding-top:6px !important; padding-bottom:2px !important; font-size:16px !important;" data-icon="&#xF00D;" title="Remove">&#xF00D;</a>
                     <div class="updates-count stable" title="Updates Count">13</div>
                     <h2 style="width:140px !important; float:right; margin-left:0px;">
                         <strong>
